fix(ins/rm) fixed alignment for Similar Sysytem

--- a/src/app/pages/solution/fingerprint-details/fp-similarassets/fp-similarassets.component.scss
+++ b/src/app/pages/solution/fingerprint-details/fp-similarassets/fp-similarassets.component.scss
@@ -30,6 +30,6 @@
 
 	.cui .link {
 		position: absolute;
-		right: 50px;
+		right: 28px;
 	}
 }
